--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,8 +9,10 @@
 	{{ block "head_meta_includes" . }}{{ end }} 
 
 	<!-- Styles -->
-	<link href="/css/bootstrap.min.css" rel="stylesheet">
-	<link href="/css/main.css" rel="stylesheet">
+	<link href="/css/Lightmode.bootstrap.min.css" rel="stylesheet">
+	<link href="/css/lightmain.css" rel="stylesheet">
+	<link rel="stylesheet" href="/css/Darkmode.bootstrap.min.css">
+	<link rel="stylesheet" href="/css/darkmain.css">
 
 	{{ block "head_includes" . }}{{ end }} 
 	{{ with $settingsCode.Params.siteheader }}{{ . | safeHTML }}{{ end }}
