--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -35,5 +35,33 @@
 <script src="/js/app.js"></script>
 {{ block "body_includes" . }}{{ end }} 
 {{ with $settingsCode.Params.sitefooter }}{{ . | safeHTML }}{{ end }}
+<script>
+    const switchElement = document.getElementById('dark-mode-switch');
+    const body = document.body;
+
+    switchElement.addEventListener('change', () => {
+      if (switchElement.checked) {
+        // Enable dark mode
+        body.classList.add('dark-mode');
+        // Load light mode CSS files
+        loadCSS('Lightmode.bootstrap.min.css');
+        loadCSS('lightmain.css');
+      } else {
+        // Disable dark mode
+        body.classList.remove('dark-mode');
+        // Load dark mode CSS files
+        loadCSS('Darkmode.bootstrap.min.css');
+        loadCSS('darkmain.css');
+      }
+    });
+
+    // Function to dynamically load CSS files
+    function loadCSS(filename) {
+      const link = document.createElement('link');
+      link.rel = 'stylesheet';
+      link.href = filename;
+      document.head.appendChild(link);
+    }
+  </script>
 </body>
 </html>
