--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -59,7 +59,7 @@
 
     <div class="collapse navbar-collapse" id="main-navigation">
     <a class="nav-link " href="/">Stonema</a>
-    <input type="checkbox" class="theme-checkbox" id="dark-mode-switch">
+    <input type="checkbox" class="theme-checkbox" id="dark-mode-switch" onclick="toggleMode()">
       <!-- Begin Menu -->
       <ul class="navbar-nav ms-auto">
         {{ $currentUrl := .RelPermalink }}
@@ -73,24 +73,26 @@
     </div>
   </div>
   <script>
-      function toggleDarkLight() {
-      var body = document.body;
-      var currentClass = body.className;
+      function toggleMode() {
+     var currentStylesheet = document.getElementById('modeStylesheet');
+     var isDarkMode = currentStylesheet.href.includes('darkmode.css');
 
-      // Toggle between 'dark-mode' and 'light-mode'
-      body.className = currentClass === 'dark-mode' ? 'light-mode' : 'dark-mode';
-
-      // Store the current mode in local storage
-      localStorage.setItem('stateMode', body.className);
+     // Toggle between dark mode and light mode
+     if (isDarkMode) {
+         currentStylesheet.href = 'darkmain.css';
+      } else {
+          currentStylesheet.href = 'lightmain.css';
+      }
+  
+      if (isDarkMode) {
+         currentStylesheet.href = 'Darkmode.bootstrap.min.css';
+      } else {
+          currentStylesheet.href = 'Lightmode.bootstrap.min.css';
+      }
   }
 
-// Set initial mode on page load
-  document.addEventListener('DOMContentLoaded', function () {
-      var savedMode = localStorage.getItem('stateMode');
-      if (savedMode) {
-          document.body.className = savedMode;
-      }
-  });
+      // Set initial mode (you can choose light mode as default)
+    document.getElementById('modeStylesheet').href = 'lightmode.css';
 
   </script>
 </nav>
