--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -75,7 +75,7 @@
   <script>
       function toggleMode() {
      var currentStylesheet = document.getElementById('modeStylesheet');
-     var isDarkMode = currentStylesheet.href.includes('darkmode.css');
+     var isDarkMode = currentStylesheet.href.includes('darkmain.css');
 
      // Toggle between dark mode and light mode
      if (isDarkMode) {
@@ -92,7 +92,7 @@
   }
 
       // Set initial mode (you can choose light mode as default)
-    document.getElementById('modeStylesheet').href = 'lightmode.css';
+    document.getElementById('modeStylesheet').href = 'lightmain.css';
 
   </script>
 </nav>
