--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,6 +14,8 @@
   <!-- Dark mode styles -->
   <link rel="stylesheet" href="/css/Darkmode.bootstrap.min.css">
   <link rel="stylesheet" href="/css/darkmain.css">
+  <link id="modeStylesheet" rel="stylesheet">
+
 
 	{{ block "head_includes" . }}{{ end }} 
 	{{ with $settingsCode.Params.siteheader }}{{ . | safeHTML }}{{ end }}
