--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -92,7 +92,7 @@
   }
 
       // Set initial mode (you can choose light mode as default)
-    document.getElementById('modeStylesheet').href = 'lightmain.css';
+    document.getElementById('modeStylesheet').href = '/css/lightmain.css';
 
   </script>
 </nav>
