--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -80,19 +80,15 @@
      // Toggle between dark mode and light mode
      if (isDarkMode) {
          currentStylesheet.href = '/css/darkmain.css';
-      } else {
-          currentStylesheet.href = '/css/lightmain.css';
-      }
-  
-      if (isDarkMode) {
          currentStylesheet.href = '/css/Darkmode.bootstrap.min.css';
       } else {
+          currentStylesheet.href = '/css/lightmain.css';
           currentStylesheet.href = '/css/Lightmode.bootstrap.min.css';
       }
   }
 
       // Set initial mode (you can choose light mode as default)
-    document.getElementById('modeStylesheet').href = '/css/lightmain.css';
+    document.getElementById('modeStylesheet').href = '/css/darkmain.css';
 
   </script>
 </nav>
