--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -87,7 +87,7 @@
       }
   }
 
-      // Set initial mode (you can choose light mode as default)
+      // Set initial mode (you can choose light mode as defauslt)
     document.getElementById('modeStylesheet').href = '/css/darkmain.css';
 
   </script>
