--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -36,6 +36,7 @@
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/medium-zoom.min.js"></script>
 <script src="/js/app.js"></script>
+<script src="/js/darkmodeswitch.js"></script>
 {{ block "body_includes" . }}{{ end }} 
 {{ with $settingsCode.Params.sitefooter }}{{ . | safeHTML }}{{ end }}
 </body>
