--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,1 +1,1 @@
-{{/* Empty template for list pages that we don't need. For example /pages/index.html or /settings/index.html  */}}
+s{{/* Empty template for list pages that we don't need. For example /pages/index.html or /settings/index.html  */}}
