removal of button

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,9 +9,9 @@
 	{{ block "head_meta_includes" . }}{{ end }} 
 
 	<!-- Styles -->
-	<link rel="stylesheet" href="/css/Lightmode.bootstrap.min.css">
+	<!-- <link rel="stylesheet" href="/css/Lightmode.bootstrap.min.css">
   <link rel="stylesheet" href="/css/lightmain.css">
-  <!-- Dark mode styles -->
+  Dark mode styles -->
   <link rel="stylesheet" href="/css/Darkmode.bootstrap.min.css">
   <link rel="stylesheet" href="/css/darkmain.css">
   <link id="modeStylesheet" rel="stylesheet">
