--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,1 +1,1 @@
-s{{/* Empty template for list pages that we don't need. For example /pages/index.html or /settings/index.html  */}}
+{{/* Empty template for list pages that we don't need. For example /pages/index.html or /settings/index.html  */}}
