--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -59,8 +59,8 @@
 
     <div class="collapse navbar-collapse" id="main-navigation">
     <a class="nav-link " href="/">Stonema</a>
-    <input type="checkbox" class="theme-checkbox" id="dark-mode-switch" onclick="toggleMode()">
-      <!-- Begin Menu -->
+   <!-- <input type="checkbox" class="theme-checkbox" id="dark-mode-switch" onclick="toggleMode()"> 
+   Begin Menu -->
       <ul class="navbar-nav ms-auto">
         {{ $currentUrl := .RelPermalink }}
         {{ range $settingsNavigation.Params.link }}
@@ -72,5 +72,5 @@
       <!-- End Menu -->
     </div>
   </div>
-  <script src="/js/darkmodeswitch.js"></script>
+ <!-- Styles  <script src="/js/darkmodeswitch.js"></script>-->
 </nav>
