--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,7 +14,7 @@
   Dark mode styles -->
   <link rel="stylesheet" href="/css/Darkmode.bootstrap.min.css">
   <link rel="stylesheet" href="/css/darkmain.css">
-  <link id="modeStylesheet" rel="stylesheet">
+  <!-- <link id="modeStylesheet" rel="stylesheet"> -->
 
 
 	{{ block "head_includes" . }}{{ end }} 
@@ -36,7 +36,7 @@
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/medium-zoom.min.js"></script>
 <script src="/js/app.js"></script>
-<script src="/js/darkmodeswitch.js"></script>
+<!--<script src="/js/darkmodeswitch.js"></script>-->
 {{ block "body_includes" . }}{{ end }} 
 {{ with $settingsCode.Params.sitefooter }}{{ . | safeHTML }}{{ end }}
 </body>
