--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,4 +1,4 @@
-{{ $settingsCode := .Site.GetPage "/settings/code/" -}}
+{{ $settingsCode := .Site.GetPage "/settings/code" -}}
 <!DOCTYPE html>
 <html>
 <head>
