--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,8 +12,8 @@
 	<!-- <link rel="stylesheet" href="/css/Lightmode.bootstrap.min.css">
   <link rel="stylesheet" href="/css/lightmain.css">
   Dark mode styles -->
-  <link rel="stylesheet" href="/css/Lightmode.bootstrap.min.css">
-  <link rel="stylesheet" href="/css/lightmain.css">
+  <link rel="stylesheet" href="/css/Darkmode.bootstrap.min.css">
+  <link rel="stylesheet" href="/css/darkmain.css">
   <!-- <link id="modeStylesheet" rel="stylesheet"> -->
 
 
