--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -59,6 +59,8 @@
 
     <div class="collapse navbar-collapse" id="main-navigation">
     <a class="nav-link " href="/">Stonema</a>
+    <img src="TransparentStonema.png" class="nav-link" href="/">
+ 
    <!-- <input type="checkbox" class="theme-checkbox" id="dark-mode-switch" onclick="toggleMode()"> 
    Begin Menu -->
       <ul class="navbar-nav ms-auto">
