--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -59,7 +59,7 @@
 
     <div class="collapse navbar-collapse" id="main-navigation">
     <a class="nav-link " href="/">Stonema</a>
-    <img src="TransparentStonema.png" class="nav-link" href="/">
+    <img src="TransparentStonema.png" class="nav-link" href="/" width="50%">
  
    <!-- <input type="checkbox" class="theme-checkbox" id="dark-mode-switch" onclick="toggleMode()"> 
    Begin Menu -->
