--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -58,7 +58,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="main-navigation">
-
+    <a class="nav-link " href="/">Home</a>
  
    <!-- <input type="checkbox" class="theme-checkbox" id="dark-mode-switch" onclick="toggleMode()"> 
    Begin Menu -->
